--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         <activity
             android:name=".SettingsActivity"
             android:exported="false" />
+        <activity android:name=".NotificationActivity"
+            android:exported="false" />
+        <activity android:name=".USPSHomeActivity"
+            android:exported="false" />
         <activity
             android:name=".ProfileActivity"
             android:exported="false" />
